# django_react_app

./: dev.Dockerfile  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
API/API/: asgi.py  settings.py  urls.py  wsgi.py
api/: .gitignore  makefile  pyproject.toml
api/api/: settings.py  urls.py
api/userops/: apps.py  urls.py  views.py
app/app/: settings.py
frontend/: .gitignore  index.html  makefile  package-lock.json
frontend/src/: App.tsx  Message.tsx
frontend/src/components/: Header.tsx  Message.tsx
